░█████╗░██╗░░██╗░█████╗░███╗░░██╗░██████╗░███████╗  ██╗░░░░░░█████╗░░██████╗░
██╔══██╗██║░░██║██╔══██╗████╗░██║██╔════╝░██╔════╝  ██║░░░░░██╔══██╗██╔════╝░
██║░░╚═╝███████║███████║██╔██╗██║██║░░██╗░█████╗░░  ██║░░░░░██║░░██║██║░░██╗░
██║░░██╗██╔══██║██╔══██║██║╚████║██║░░╚██╗██╔══╝░░  ██║░░░░░██║░░██║██║░░╚██╗
╚█████╔╝██║░░██║██║░░██║██║░╚███║╚██████╔╝███████╗  ███████╗╚█████╔╝╚██████╔╝
░╚════╝░╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░╚══╝░╚═════╝░╚══════╝  ╚══════╝░╚════╝░░╚═════╝░

Here is where I will post updates on when a new game is added or something changed. Besure to check back often for any sneakpeaks or other goodies! If I can I will try to setup a RSS feed for all of those who use that. Coming soon!
------------------------------------------------------------
Feb, 16
+ Added Tank Trouble 2
------------------------------------------------------------
Feb, 14
Happy Valentines day for those how celebrate it!
+ Changelog page! Pog!
+ Started research on writing iframes on a about:blank page
^ Updated the "green text" on the homepage.
Have a great rest of your day!